--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -13,6 +13,8 @@
     display: inline-block;
     white-space: nowrap;
     float: right;
+    position:relative;
+    z-index:1;
 }
 
 .public-menu ul>label{
