--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -38,6 +38,16 @@
 }
 
 
+.funders-logos>div, .communities-logos>div {
+    width: 200px;
+    height: 130px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: inline-block;
+    margin: 10px;
+}
+
 
 
 .ui-view.public-map {
