nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -69,7 +69,7 @@
 .field-value-module.editable:after {
     content: " edit";
     font-style: italic;
-    color: cornflowerblue;
+    color: #637594;
     cursor: pointer;
 }
 
