--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -65,6 +65,17 @@
     height: 60px;
 }
 
+.module-wizard label.boolean-field, .module-wizard .BooleanAttribute {
+    display: block;
+    background: rgba(0,0,0,0.1);
+    margin: 5px 0;
+    padding: 9px;
+}
+
+.module-wizard label.boolean-field input, .module-wizard .BooleanAttribute input{
+    margin-right:7px
+}
+
 
 .field-value-module.editable:after {
     content: " edit";
