nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/Generated Style Script.customCSS.css
+++ b/app/Generated Style Script.customCSS.css
@@ -205,3 +205,8 @@ span.flag.checked{
 .ifw-bkg-arrow {
     background-color: #6A7CE9;
 }
+
+
+.CustomTile.top-right.proposal-tile {
+    width: 0;
+}
