nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -303,7 +303,7 @@ h2 {
 }
 
 
-.ui-list-view.no-sub-list-style .ui-view .inline-list-item .ui-view, .no-sub-list-style .ui-list-view .ui-view .inline-list-item .ui-view {
+.ui-list-view.no-sub-list-style .ui-view .ui-view, .no-sub-list-style .ui-list-view .ui-view .ui-view {
    border:none;
 }
 
