nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -84,7 +84,7 @@ label.boolean-field p {
 }
 
 
-.field-value-module.editable:after {
+.field-value-module.editable:after, .field-value-module .editable:after{
     content: " edit";
     font-style: italic;
     color: #637594;
