--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -236,8 +236,8 @@ body.dragover .file-item.droppable-hide {
     font-size: 10px;
 }
 
-.file-item .remove-btn {
-    position:absolute;
+.file-item .remove-btn, .file-item .edit-btn {
+    position: absolute;
     top: 10px;
     right: 15px;
     background: crimson;
@@ -248,6 +248,12 @@ body.dragover .file-item.droppable-hide {
     padding: 0;
     margin: 0;
     border: none;
+    cursor: pointer;
+}
+
+.file-item .edit-btn {
+    background: mediumseagreen;
+    right: 40px;
 }
 
 
