nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -1,5 +1,5 @@
 .file-item .edit-btn {
-    background-image: url("<?php echo UrlFrom("{assets}/Map Item Icons/xsm_edit"); ?>");
+    background-image: url("<?php echo UrlFrom("{assets}/Map Item Icons/xsm_edit.png"); ?>");
 }
 
 
