--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1824,6 +1824,12 @@ ul.user-roles:hover>li.active {
     display: inline-block;
 }
 
+.ui-view.inline-icon-list-view, .ui-view.inline-icon-list-view .ui-view {
+    padding: 0;
+    max-height: 20px;
+    overflow: hidden;
+}
+
 ul.inline-filter {
     display: block;
     width: 100%;
