--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1830,7 +1830,7 @@ ul.user-roles:hover>li.active {
     overflow: hidden;
 }
 
-.inline-icon-list-view .user-profile-icon, div.user-profile-icon.content {
+.inline-icon-list-view .user-profile-icon {
     height: 20px;
     width: 20px;
     margin: 0 5px;
