--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -468,11 +468,14 @@ span.inline-list-item {
     padding: 4px;
 }
 .ui-view.inset-shading>div {
-    background-color: #333746;
+    background-color: #f0f0f0;
     display: inline-block;
     width: 100%;
     height: 100%;
     border-radius: 4px;
+}
+.dark .ui-view.inset-shading>div {
+     background-color: #333746;
 }
 
 .ui-view.inset-menu-shading {
