--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -466,7 +466,7 @@ span.inline-list-item {
     border-radius: 100%;
     border-color: rgba(255,255,255,0.5);
     box-sizing: border-box;
-    box-shadow:0 0 3px rgba(0,0,0,0.5);
+    box-shadow:0 0 1px 1px black;
 }
 
 .dark .user-detail .single_ImageContainer:after{
