nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -653,6 +653,9 @@ span.inline-list-item {
 }
 
 .navigation-menu button:hover, .inline-navigation-menu button:hover {
+    color: black;
+}
+.dark .navigation-menu button:hover, .dark .inline-navigation-menu button:hover {
     color: white;
 }
 
