nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -612,9 +612,13 @@ span.inline-list-item {
 }
 
 .navigation-menu label {
-    color: white;
+
     text-transform: uppercase;
     font-size: 1.1em;
+}
+
+.dark .navigation-menu label{
+     color: white;
 }
 
 .navigation-menu li:before {
