nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1777,6 +1777,14 @@ button.inline-btn.add:hover{
     display: none;
 }
 
+.mandatory-field>.text-input {
+    border-color: mediumseagreen;
+}
+
+.mandatory-field:after {
+
+}
+
 ul.user-roles>li {
     display: inline-block;
     width: 20px;
