-- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -68,6 +68,7 @@ foreach($config->getParameters() as $key=>$value){
     background-size: auto 28px;
     background-repeat: no-repeat;
     background-position: center;
+    position: relative;
 }
 
 
