nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2079,6 +2079,10 @@ img.static-map {
 
 .percent-complete-value {
     font-size: 12px;
+    
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .percent-complete-value span.overdue {
     color: #E96A6A;
