nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -264,6 +264,7 @@ body.dragover .file-item.droppable-hide {
 .file-item .edit-btn {
     background: mediumseagreen;
     right: 40px;
+    display:none;
 }
 
 
