nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1833,6 +1833,11 @@ ul.user-roles {
 ul.user-roles{
     height:50px;
 }
+
+.ui-template-form ul.user-roles {
+    display: none;
+}
+
 ul.user-roles li{
     opacity: 0;
     filter: grayscale(1);
