--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -72,6 +72,16 @@ foreach($config->getParameters() as $key=>$value){
 }
 
 
+.field-value-module.with-description .field-value:after {
+    content: " ... ";
+    color: #cbb453;
+    background-image: url("<?php echo UrlFrom("{assets}/Control Panel Icons/text.png"); ?>?tint=rgb(180,180,180)");
+    width: 20px;
+    height: 20px;
+    background-size: auto 100%;
+}
+
+
 .synopsis-item {
     background-image:url("<?php echo UrlFrom($menuIconDefault); ?>?tint=rgb(180,180,180)");
 }
