nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -139,13 +139,20 @@ label.boolean-field p {
     min-height: 30px;
 }
 
-.template-footer {
+.pb-w .template-footer {
     position: absolute;
     bottom: -54px;
     width: 100%;
     right: 0;
     background-color: #2E303A;
     border-radius: 0 0 3px 3px;
+}
+
+.WizardButton.btn.cancel {
+    display: none;
+}
+.pb-w .WizardButton.btn.cancel {
+    display: inline-block;
 }
 
 body.dragover .droppable.drop-letters, 
