nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -380,12 +380,16 @@ h2 {
     background-color: rgba(106, 233, 191, 0.1);
 }
 
-.project-type-missing-tasks-hint {
+.pro-tip-hint, .project-type-missing-tasks-hint {
     float: right;
     color: #c6af4f;
     width: 200px;
     font-size: 12px;
     font-style: italic;
+}
+
+.project-type-missing-tasks-hint {
+    background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/tree.png"); ?>")
 }
 
 
