nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -389,7 +389,10 @@ h2 {
 }
 
 .project-type-missing-tasks-hint {
-    background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/tree.png"); ?>")
+    background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/tree.png"); ?>?tint=rgb(198, 175, 79)");
+    background-repeat: no-repeat;
+    background-position: left center;
+    padding-left: 50px;
 }
 
 
