nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -388,7 +388,7 @@ h2 {
     font-style: italic;
 }
 
-.project-type-missing-tasks-hint {
+.pro-tip-hint, .project-type-missing-tasks-hint {
     background-repeat: no-repeat;
     background-position: left center;
     padding-left: 35px;
