nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -244,6 +244,25 @@ body.dragover .file-item.droppable-hide {
     font-size: 12px;
 }
 
+.file-list .droppable.drop-spatial:after {
+    content: " Spatial";
+    font-size: 12px;
+    color:#c7ae4b;
+}
+.file-list .droppable.drop-attachments:after {
+    content: " Attachments";
+    font-size: 12px;
+    color:#c7ae4b;
+}
+
+
+.file-list .droppable.drop-spatial:before, .file-list .droppable.drop-attachments:before {
+    content: "Add";
+    font-size: 12px;
+}
+
+
+
 
 
 .file-list .file-item, .file-list .droppable {
