nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -283,7 +283,7 @@ body.dragover .file-item.droppable-hide {
 }
 .file-list .file-item:hover .file-container {
     box-shadow:0 0 8px rgba(0,0,0,0.7);
-    border:1px solid #6d8dda;
+    border: 1px solid #333746;
     
 }
 
