nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -101,8 +101,8 @@ label.boolean-field p {
 }
 
 .user-form .application-logo {
-    height: 100px;
-    background-size: auto 100%;
+
+    background-size: auto 100px;
     background-position: left;
     background-repeat: no-repeat;
     max-width: 500px;
