--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -38,6 +38,19 @@
 }
 
 
+button.public-user-chat {
+    font-size: 0;
+    width: 60px;
+    height: 60px;
+    background-color: mediumseagreen;
+    border: none;
+    border-radius: 100%;
+    position: fixed;
+    bottom: 10px;
+    right: 30px;
+}
+
+
 .funders-logos>div, .communities-logos>div {
     width: 200px;
     height: 130px;
