nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2430,6 +2430,16 @@ img.static-map {
 }
 
 
+
+@media only screen and (max-height: 700px) {
+    .bar-chart {
+        height:100px
+    }
+
+}
+
+
+
 .panel-toggle {
     position: absolute;
     right: 0;
