nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2432,7 +2432,7 @@ img.static-map {
 
 
 @media only screen and (max-height: 700px) {
-    .bar-chart {
+    .project-detail .bar-chart {
         height:100px
     }
 
