--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2241,8 +2241,8 @@ img.static-map {
     
     
     .left-panel .application-logo {
-        font-size: 0;
-        background-position: center;
+        text-overflow: clip;
+        overflow: hidden;
     }
 
     
@@ -2288,6 +2288,11 @@ img.static-map {
 }
 
 @media screen and (max-width: 1000px){
+    
+    .left-panel .application-logo {
+        font-size: 0;
+        background-position: center;
+    }
 
     .ui-view.left-panel{
         width:100px;
