nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2287,6 +2287,11 @@ img.static-map {
     }
 }
 
+.ui-view.left-panel.closed .application-logo {
+        font-size: 0;
+        background-position: center;
+    }
+
 @media screen and (max-width: 1000px){
     
     .left-panel .application-logo {
