nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2027,6 +2027,10 @@ ul.user-roles:hover>li.active {
     margin: 0 5px;
 }
 
+.inline-icon-list-view div.user-profile-icon.content .resizedImage {
+    pointer-events: none;
+}
+
 ul.inline-filter {
     display: block;
     width: 100%;
