--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1496,6 +1496,13 @@ button.primary-btn, .WizardButton, .WizardTitle li, .t-btn {
     font-weight: 100;
     float: right;
     margin: 10px;
+    cursor:pointer;
+}
+
+.btn.forgot-pwd {
+    background-color: rgba(0,0,0,0.1);
+    color: #697ce9;
+    font-style: italic;
 }
 
 .uitext-container{
