nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1179,6 +1179,16 @@ img.youtubelogo {
 }
 
 
+@media screen and (max-width: 1450px){
+    .task-title .field-value {
+        max-width: 300px;
+    }
+}
+@media screen and (max-width: 1250px){
+    .task-title .field-value {
+        max-width: 220px;
+    }
+}
 
 
 
