nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -37,6 +37,11 @@
     
 }
 
+label.label-block {
+    display: block;
+    line-height: 60px;
+}
+
 .help-text {
     color: cadetblue;
     font-size: 12px;
