--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -59,6 +59,21 @@ button.public-user-chat {
     right: 30px;
 }
 
+.posts:before {
+    content: attr(data-posts);
+    background-color: crimson;
+    width: 14px;
+    height: 14px;
+    display: inline-block;
+    vertical-align: middle;
+    line-height: 14PX;
+    font-size: 10px;
+    color: black;
+    text-align: center;
+    border-radius: 100%;
+    margin: 0 5px;
+}
+
 .discussion-module.users-public-chat {
     height: 0px;
     transition: height 0.5s;
