nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -59,7 +59,7 @@ button.public-user-chat {
     right: 30px;
 }
 
-.posts:before {
+.withPosts .posts:before {
     content: attr(data-posts);
     background-color: crimson;
     width: 14px;
