--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1951,6 +1951,10 @@ button.inline-btn.add:hover{
 }
 
 
+span.SearchModule.search-container {
+    display: none;
+}
+
 
 .no-text .text-input {
     display: none;
