--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -26,7 +26,7 @@ button.btn-reset-list {
 }
 
 
-button.btn-reset-list {
+button.btn-search-list {
     background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/search.png"); ?>?tint=rgb(106, 233, 191)");
 
     width: 20px;
