--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -879,6 +879,12 @@ span.inline-list-item {
     text-overflow: ellipsis;
 }
 
+.module-wizard .field-value-module.item-title {
+    width: 100%;
+    overflow: visible;
+    white-space: initial;
+}
+
 .section-help>* {
     padding: 0 20px 20px 20px;
     display: block;
